Fix: Align styles to Storybook v7

--- a/BlazingStory/Internals/Components/Buttons/SquareButton.razor.scss
+++ b/BlazingStory/Internals/Components/Buttons/SquareButton.razor.scss
@@ -1,8 +1,8 @@
 .square-button {
-    background: #fafafa;
+    background: var(--bs-back-color);
     color: var(--bs-text-color);
     font-weight: bold;
-    box-shadow: rgb(0 0 0 / 10%) 0 0 0 1px inset;
+    box-shadow: var(--bs-square-button-box-shadow);
     border-radius: 4px;
     padding: 10px 16px;
     font-size: var(--bs-control-caption-size);
@@ -10,7 +10,7 @@
     transition: all 150ms ease-out;
 
     &:hover {
-        background: #f2f2f2;
+        background: var(--bs-hover-back-color);
     }
 
     &:focus {
