--- a/BlazingStory/wwwroot/css/styles.css
+++ b/BlazingStory/wwwroot/css/styles.css
@@ -1,6 +1,8 @@
 ﻿@import "/_content/Toolbelt.Blazor.SplitContainer/Toolbelt.Blazor.SplitContainer.bundle.scp.css";
 :root {
   --bs-back-color: #f5fbff;
+  --bs-dimmed-back-color: #ecf4f9;
+  --bs-hover-back-color: #ebf7ff;
   --bs-text-size: 13px;
   --bs-text-color: #333333;
   --bs-dimmed-text-color: #73828c;
@@ -9,7 +11,9 @@
   --bs-sidebar-nav-active-color: #fff;
   --bs-sidebar-nav-active-back-color: #1ea7fd;
   --bs-focused-color: #029cfd;
-  --bs-hover-back-color: rgba(30, 167, 253, 0.12);
+  --bs-inputs-background: #fff;
+  --bs-inputs-box-shadow: hsla(203, 50%, 30%, 0.2) 0 0 0 1px inset;
+  --bs-square-button-box-shadow: #d9e8f2 0 0 0 1px inset;
   --bs-icon-folder-color: #2a0481;
   --bs-icon-story-container-color: #029cfd;
   --bs-icon-story-color: #37d5d3;
@@ -89,9 +93,9 @@ button {
   padding: 6px 10px;
   width: 100%;
   font-size: var(--bs-text-size);
-  background: #FFFFFF;
+  background: var(--bs-inputs-background);
   color: var(--bs-text-color);
-  box-shadow: rgba(0, 0, 0, 0.1) 0 0 0 1px inset;
+  box-shadow: var(--bs-inputs-box-shadow);
   border-radius: 4px;
   line-height: 20px;
   text-align: left;
@@ -452,10 +456,10 @@ a.icon-button {
 }
 
 .square-button {
-  background: #fafafa;
+  background: var(--bs-back-color);
   color: var(--bs-text-color);
   font-weight: bold;
-  box-shadow: rgba(0, 0, 0, 0.1) 0 0 0 1px inset;
+  box-shadow: var(--bs-square-button-box-shadow);
   border-radius: 4px;
   padding: 10px 16px;
   font-size: var(--bs-control-caption-size);
@@ -463,7 +467,7 @@ a.icon-button {
   transition: all 150ms ease-out;
 }
 .square-button:hover {
-  background: #f2f2f2;
+  background: var(--bs-hover-back-color);
 }
 .square-button:focus {
   box-shadow: rgb(30, 167, 253) 0 0 0 1px inset;
@@ -477,12 +481,13 @@ a.icon-button {
   display: inline-flex;
   position: relative;
   white-space: nowrap;
-  background: rgba(0, 0, 0, 0.15);
+  background: var(--bs-dimmed-back-color);
   border-radius: 3em;
   padding: 1px;
 }
 .toggle-button input {
   appearance: none;
+  outline: none;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -495,7 +500,7 @@ a.icon-button {
   cursor: pointer;
   border-radius: 3em;
 }
-.toggle-button input:focus {
+.toggle-button input:focus, .toggle-button input:focus-visible {
   box-shadow: var(--bs-focused-color) 0 0 0 1px inset !important;
 }
 .toggle-button span {
@@ -520,7 +525,7 @@ a.icon-button {
 }
 .toggle-button input:checked ~ span:last-of-type,
 .toggle-button input:not(:checked) ~ span:first-of-type {
-  background: var(--bs-back-color);
+  background: var(--bs-inputs-background);
   box-shadow: rgba(0, 0, 0, 0.2) 0 0 2px;
   color: var(--bs-text-color);
   padding: 7px 15px;
