--- a/BlazingStory/wwwroot/css/variables.scss
+++ b/BlazingStory/wwwroot/css/variables.scss
@@ -1,5 +1,7 @@
 ﻿:root {
     --bs-back-color: #f5fbff;
+    --bs-dimmed-back-color: #ecf4f9;
+    --bs-hover-back-color: #ebf7ff;
     --bs-text-size: 13px;
     --bs-text-color: #333333;
     --bs-dimmed-text-color: #73828c;
@@ -8,12 +10,17 @@
     --bs-sidebar-nav-active-color: #fff;
     --bs-sidebar-nav-active-back-color: #1ea7fd;
     --bs-focused-color: #029cfd;
-    --bs-hover-back-color: rgba(30, 167, 253, 0.12);
+    // inputs
+    --bs-inputs-background: #fff;
+    --bs-inputs-box-shadow: hsla(203, 50%, 30%, 0.2) 0 0 0 1px inset;
+    --bs-square-button-box-shadow: #d9e8f2 0 0 0 1px inset;
+    // icons
     --bs-icon-folder-color: #2a0481;
     --bs-icon-story-container-color: #029cfd;
     --bs-icon-story-color: #37d5d3;
     --bs-keymap-text-color: #5c6870;
     --bs-keymap-back-color: rgba(0,0,0,0.05);
+    // popup menu
     --bs-popup-back-color: rgba(255,255,255,0.95);
     --bs-popup-text-color: #2E3438;
     --bs-popup-hover-back-color: rgba(2,156,253,0.07);
